# simple-xact

./: Cargo.toml  LICENSE  README.md
src/: bank.rs  cli.rs  lib.rs  main.rs
src/bank/: tests.rs
src/io/: read.rs  write.rs
src/io/read/: tests.rs
src/io/write/: tests.rs
test-data/test-cli/: input
tests/: test-cli.rs
