[package]
name = "simple-xact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
clap = { version="3.1.1", features=["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1.6"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
stringreader = "0.1.1"